--- a/web_shell/VM-Framework/views/logSdkAgents.erb
+++ b/web_shell/VM-Framework/views/logSdkAgents.erb
@@ -17,7 +17,7 @@
 <a class="btn btn-primary pull-right" href="/reset_ruby_agent_sdk_server_log">erase log file</a>
 
 <H2>
-  This content is available in the file : ruby_workspace/sdk_logs/ruby-agent-sdk-server.log
+  This content is available in the file :<br/> ruby_workspace/sdk_logs/ruby-agent-sdk-server.log
 </H2>
 
 <br><br><br><br>
