--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -62,8 +62,8 @@
     <thead>
       <tr>
         <th># Received</th>
-        <th># parse error</th>
-        <th># channel error</th>
+        <th># Parse error</th>
+        <th># Channel error</th>
         <th># Ack error</th>
         <th># Ack to device</th>
         <th># Total queued to device</th>
