Add an image icon on the admin panel.

--- a/web_shell/VM-Framework/views/layout.erb
+++ b/web_shell/VM-Framework/views/layout.erb
@@ -39,9 +39,11 @@
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="">
-              <a href="#">SDK Server <%= get_sdk_version %></a>
+              <img src="/img/shutterstock_105420140_35.png" class="img-rounded">
             </li>
             <li class="">
+              <a href="#">SDK Server <%= get_sdk_version %></a>
+            </li>
             <li class="<% if @active_tab=='projects'%><%= 'active' %><% end %>">
               <a href="./projects"><i class="icon-th-large icon-white"></i> SDK Agents</a>
             </li>
