--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -90,7 +90,7 @@
   <div class="well row">
      <p>
       <b>REMINDER:</b><br/>
-      Remember to click on button <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
+      Remember to click on button <b>'reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
 
       <b>How to check if reboot went ok :</b><br/>
       If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the  <a href="/logSdkAgents">SDK Agents Log tab</a>  (ruby-agent-sdk-server.log).<br/>
@@ -200,156 +200,158 @@
     <label class="checkbox">
       <input name="reset_logs" type="checkbox" <% if is_reset_log_checked == 'true' %> checked <% end %> > Reset logs on reboot
     </label>
-    <button class="btn btn-primary">Apply and reboot ruby agent sdk server</button>
+    <button class="btn btn-primary">reboot ruby agent sdk server</button>
   </form>
 </div>
-<br>
+<br/>
 <!-- End reboot server form ====================================================-->
 
 <!-- Agents Panel ==============================================================-->
-<table class="table table-bordered table-striped">
-  <thead>
-    <tr>
-    <th>Agent name</th>
-    <% if is_show_more_stats == 'true' %>
-      <th>#Received</th>
-      <th>#Ruby Error</th>
-      <th>#Reply to device</th>
-      <th>#Reply error</th>
-      <th>#Message to device</th>
-      <th>#Message error </th>
-    <% else %>
-      <th> Stats</th>
-    <% end %>
-    <th>Active</th>
-    <% if is_cron_tasks_visible == 'true' %>
-      <th>Cron Tasks</th>
-    <% end %>
-
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @agents.each do |agent_name, agent| %>
+<div class="row">
+  <table class="table table-bordered table-striped">
+    <thead>
       <tr>
-        <td><%= agent.name %></td>
+      <th>Agent name</th>
+      <% if is_show_more_stats == 'true' %>
+        <th>#Received</th>
+        <th>#Ruby Error</th>
+        <th>#Reply to device</th>
+        <th>#Reply error</th>
+        <th>#Message to device</th>
+        <th>#Message error </th>
+      <% else %>
+        <th> Stats</th>
+      <% end %>
+      <th>Active</th>
+      <% if is_cron_tasks_visible == 'true' %>
+        <th>Cron Tasks</th>
+      <% end %>
 
-        <% if is_show_more_stats == 'true' %>
-          <td><span class="label label-error"><b><big>
-            <%= agent.agent_stats['received']%>
-          </big></b></span></td>
+      </tr>
+    </thead>
 
-          <td>
-          <% if agent.agent_stats['err_while_process'] == [0, 0, 0, 0] %>
-            <%= '<span class="label label-error">' %>
-          <% else %>
-            <%= '<span class="label label-important">' %>
-          <% end %>
-          <b><big>
-          <%= agent.agent_stats['err_while_process'] %>
-          </big></b></span></td>
+    <tbody>
+      <% @agents.each do |agent_name, agent| %>
+        <tr>
+          <td><%= agent.name %></td>
 
-          <td><span class="label label-error"><b><big>
-            <%= agent.agent_stats['reply_sent_to_device'] %>
-          </big></b></span></td>
+          <% if is_show_more_stats == 'true' %>
+            <td><span class="label label-error"><b><big>
+              <%= agent.agent_stats['received']%>
+            </big></b></span></td>
 
-          <td>
-          <% if agent.agent_stats['err_on_reply'] == 0 %>
-            <%= '<span class="label label-error">' %>
-          <% else %>
-            <%= '<span class="label label-important">' %>
-          <% end %>
-          <b><big>
-          <%= agent.agent_stats['err_on_reply'] %>
-          </big></b></span></td>
-
-          <td><span class="label label-error"><b><big>
-            <%= agent.agent_stats['push_sent_to_device'] %>
-          </big></b></span></td>
-
-          <td>
-          <% if agent.agent_stats['err_on_push'] == 0 %>
-            <%= '<span class="label label-error">' %>
-          <% else %>
-            <%= '<span class="label label-important">' %>
-          <% end %>
-          <big><b>
-          <%= agent.agent_stats['err_on_push'] %>
-          </big></b></span></td>
-
-        <% else %>
-          <td>
-            <span class="label label-error"><b><big>
-              <%= agent.agent_stats['total_received'] %>
-              received
-            </big></b></span>
-
-            <% if agent.agent_stats['total_error'] == 0 %>
+            <td>
+            <% if agent.agent_stats['err_while_process'] == [0, 0, 0, 0] %>
               <%= '<span class="label label-error">' %>
             <% else %>
               <%= '<span class="label label-important">' %>
             <% end %>
             <b><big>
-              <%= agent.agent_stats['total_error'] %>
-              errors
-            </big></b></span>
+            <%= agent.agent_stats['err_while_process'] %>
+            </big></b></span></td>
 
-            <span class="label label-error"><b><big>
-              <%= agent.agent_stats['total_sent'] %>
-              sent
-            </big></b></span>
+            <td><span class="label label-error"><b><big>
+              <%= agent.agent_stats['reply_sent_to_device'] %>
+            </big></b></span></td>
+
+            <td>
+            <% if agent.agent_stats['err_on_reply'] == 0 %>
+              <%= '<span class="label label-error">' %>
+            <% else %>
+              <%= '<span class="label label-important">' %>
+            <% end %>
+            <b><big>
+            <%= agent.agent_stats['err_on_reply'] %>
+            </big></b></span></td>
+
+            <td><span class="label label-error"><b><big>
+              <%= agent.agent_stats['push_sent_to_device'] %>
+            </big></b></span></td>
+
+            <td>
+            <% if agent.agent_stats['err_on_push'] == 0 %>
+              <%= '<span class="label label-error">' %>
+            <% else %>
+              <%= '<span class="label label-important">' %>
+            <% end %>
+            <big><b>
+            <%= agent.agent_stats['err_on_push'] %>
+            </big></b></span></td>
+
+          <% else %>
+            <td>
+              <span class="label label-error"><b><big>
+                <%= agent.agent_stats['total_received'] %>
+                received
+              </big></b></span>
+
+              <% if agent.agent_stats['total_error'] == 0 %>
+                <%= '<span class="label label-error">' %>
+              <% else %>
+                <%= '<span class="label label-important">' %>
+              <% end %>
+              <b><big>
+                <%= agent.agent_stats['total_error'] %>
+                errors
+              </big></b></span>
+
+              <span class="label label-error"><b><big>
+                <%= agent.agent_stats['total_sent'] %>
+                sent
+              </big></b></span>
+            </td>
+          <% end %>
+
+          <td>
+          <% if agent.running %>
+            <form action='<%= "/agents/#{agent_name}/stop" %>' method="post">
+              <button class="btn btn-danger">Stop</button>
+            </form>
+          <% else %>
+            <form action='<%= "/agents/#{agent_name}/start" %>' method="post">
+              <button class="btn btn-success">Start</button>
+            </form>
+          <% end %>
+          </td>
+
+        <% if is_cron_tasks_visible == 'true' %>
+          <td>
+          <% agent.cron_tasks.each do | task | %>
+              <form action='/perform_cron_tasks' method="post">
+                <input type="hidden" name="task" value='<%= task.to_json %>'/>
+                <button class="btn btn-info">Perform: '<%= task['order'] %>'</button>
+              </form>
+          <% end %>
           </td>
         <% end %>
 
-        <td>
-        <% if agent.running %>
-          <form action='<%= "/agents/#{agent_name}/stop" %>' method="post">
-            <button class="btn btn-danger">Stop</button>
-          </form>
+        </tr>
+      <% end %>
+
+      <tr>
+        <form action="/create_agents" method="post">
+        <td><input type="text" name="agent[name]"/></td>
+        <% if is_show_more_stats == 'true' %>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         <% else %>
-          <form action='<%= "/agents/#{agent_name}/start" %>' method="post">
-            <button class="btn btn-success">Start</button>
-          </form>
+          <td></td>
         <% end %>
-        </td>
-
-      <% if is_cron_tasks_visible == 'true' %>
-        <td>
-        <% agent.cron_tasks.each do | task | %>
-            <form action='/perform_cron_tasks' method="post">
-              <input type="hidden" name="task" value='<%= task.to_json %>'/>
-              <button class="btn btn-info">Perform: '<%= task['order'] %>'</button>
-            </form>
+        <td><button class="btn btn-info">Create agent</button></td></form>
+        <% if is_cron_tasks_visible == 'true' %>
+          <td></td>
         <% end %>
-        </td>
-      <% end %>
-
       </tr>
-    <% end %>
-
-    <tr>
-      <form action="/create_agents" method="post">
-      <td><input type="text" name="agent[name]"/></td>
-      <% if is_show_more_stats == 'true' %>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      <% else %>
-        <td></td>
-      <% end %>
-      <td><button class="btn btn-info">Create agent</button></td></form>
-      <% if is_cron_tasks_visible == 'true' %>
-        <td></td>
-      <% end %>
-    </tr>
 
 
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 <!-- End agents panel ==========================================================-->
 
 
