--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -285,7 +285,7 @@
                 received
               </big></b></span>
 
-              <% if agent.agent_stats['total_error'] == 0 %>
+              <% if agent.agent_stats['total_error'] == nil || agent.agent_stats['total_error'] == 0 %>
                 <%= '<span class="label label-error">' %>
               <% else %>
                 <%= '<span class="label label-important">' %>
