--- a/web_shell/local_cloud_config/views/layout.erb
+++ b/web_shell/local_cloud_config/views/layout.erb
@@ -23,6 +23,10 @@
   <script src="/js/bootstrap.min.js"></script>
   <meta charset="utf-8" />
 
+<!--
+  <meta http-equiv="refresh" content="1">
+-->
+
   <style>
   body {
     padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -47,17 +51,14 @@
             <li class="<% if @active_tab=='projects'%><%= 'active' %><% end %>">
               <a href="./projects"><i class="icon-th-large icon-white"></i> SDK Agents</a>
             </li>
+            <li class="<% if @active_tab=='logSdkAgentsPunk'%><%= 'active' %><% end %>">
+              <a href="./logSdkAgentsPunk#endlog"><i class="icon-retweet icon-white"></i> Server Log</a>
+            </li>
             <li class="<% if @active_tab=='doc'%><%= 'active' %><% end %>">
               <a href="./doc"><i class="icon-book icon-white"></i> Documentation</a>
             </li>
             <li class="<% if @active_tab=='patch_note'%><%= 'active' %><% end %>">
               <a href="./patch_note"><i class="icon-book icon-white"></i> Patch notes</a>
-            </li>
-            <li class="<% if @active_tab=='logSdk'%><%= 'active' %><% end %>">
-              <a href="./logSdk#endlog"><i class="icon-wrench icon-white"></i> SDK Server Log</a>
-            </li>
-            <li class="<% if @active_tab=='logSdkAgents'%><%= 'active' %><% end %>">
-              <a href="./logSdkAgents#endlog"><i class="icon-wrench icon-white"></i> SDK Agents Log</a>
             </li>
           </ul>
         </div>
@@ -68,5 +69,7 @@
   <div class="container">
     <%= yield %>
   </div>
+
+  <div style="padding-bottom:50px"></div>
 
 </body>
