--- a/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
+++ b/web_shell/local_cloud_config/views/logSdkAgentsPunk.erb
@@ -5,7 +5,7 @@
 
 <div class="well info row well-small">
 
-  <div class="pull-left">
+  <div class="pull-left" style="margin-top:5px">
     <i class="icon-th"></i> : SERVER
     <i class="icon-star"></i> : PRESENCE
     <i class="icon-envelope"></i> : MESSAGE
@@ -15,8 +15,6 @@
   </div>
 
   <div class="pull-right">
-
-
     <% if is_log_show_com() == 'true' %>
       <a class="btn btn-success" href="/log_show_com_hide">com</a>
     <% else %>
@@ -34,10 +32,7 @@
     <% else %>
       <a class="btn btn-danger disabled" href="/log_show_error_show">errors</a>
     <% end %>
-
   </div>
-
-
 </div>
 
 <div class="row-fluid">
