Print is show more stat, just in case.

--- a/web_shell/local_cloud_config/views/projects.erb
+++ b/web_shell/local_cloud_config/views/projects.erb
@@ -129,6 +129,7 @@
 
 <!-- Server stats advanced =====================================================-->
 <% if is_show_more_stats == 'true' %>
+  <% p "doing more stats" %>
   <div class="row">
     Server stats (<b>[presence, message, track, order]</b>):
     <br/>
